--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section class="areas">
-            <h2>Explore as diversas áreas do portal:</h2>
+            <h2>Explore as diversas áreas do portal:</h2 class="miguel">
             <div class="area">
                 <img src="paenchada.jpg.jpg" alt="icone de trabalho">
                 <h3>Encontre seu caminho profissional</h3>
