--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
             <p>Colhendo os frutos do campo para construir um futuro promissor na cidade.</p>
             <a href="https://aluno.escoladigital.pr.gov.br/robotica/concurso_agrinho" class ="btn">Explore o Portal</a>
         </section>
+        
+        <section class="piupiu">
+            <h2> Explore as diversas áreas do portal: </h2>
+        </section>
 
         <section class="areas">
-            <h2>Explore as diversas áreas do portal:</h2 class="miguel">
             <div class="area">
                 <img src="paenchada.jpg.jpg" alt="icone de trabalho">
                 <h3>Encontre seu caminho profissional</h3>
@@ -102,7 +105,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Do Campo à Cidade</p>
+        <p> Agrinho "Do Campo à Cidade"</p>
     </footer>
 </body>
 </html>
