--- a/index.html
+++ b/index.html
@@ -1,3 +1,193 @@
+gabreu
+gabreux
+Ausente
+
+Jaca — 25/06/2024 21:47
+jogo
+Jaca — 01/07/2024 17:59
+i um fnt
+rola
+gabreu — 01/07/2024 17:59
+to copiando as lição de hj
+que eu faltei
+Jaca — 01/07/2024 18:02
+pdp
+gabreu
+ iniciou uma chamada que durou poucos segundos.
+ — 03/07/2024 19:12
+gabreu — 03/07/2024 19:12
+tava tomando banho né
+ou tava cagando
+Jaca — 03/07/2024 19:14
+tava comendo
+ja vm
+gabreu — 03/07/2024 19:14
+uiii
+quase
+Jaca — 03/07/2024 19:14
+https://discord.gg/f5aBJB5k
+gabreu — 03/07/2024 19:14
+esse era meu proximo chute
+Jaca — 03/07/2024 19:14
+entra ai
+ta eu aq
+e o mano vitor do morelli
+gabreu — 03/07/2024 19:27
+Imagem
+Jaca — 03/07/2024 19:35
+Imagem
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Do Campo à Cidade: Um Portal de Oportunidades</title>
+Expandir
+index.html
+4 KB
+
+
+body {
+    background-color: #F5F5F5; 
+}
+Expandir
+style.css
+3 KB
+gabreu — 06/07/2024 00:27
+bora fort?
+gabreu — 08/07/2024 13:01
+baixa vava ai nmrl
+Jaca — 08/07/2024 13:04
+eu acredito
+q eu tenho viu
+gabreu — 08/07/2024 13:06
+ve ai
+Jaca — 08/07/2024 13:07
+vou v
+gabreu — 08/07/2024 13:08
+demoro
+Jaca — 08/07/2024 13:10
+Imagem
+ata
+gabreu — 08/07/2024 13:11
+ata
+q bostinha
+Jaca — 08/07/2024 13:18
+n sei oq fazer
+ja tentei desinstala e instala
+td e n vai
+gabreu — 08/07/2024 13:19
+que estranho
+tenta reinicia o pc
+Jaca — 11/07/2024 11:16
+o car tomo um susto
+gabreu — 13/07/2024 21:46
+ai c to,a
+toma
+so uma ainda
+Jaca — 13/07/2024 22:07
+E
+gabreu — Ontem às 17:09
+to editando meu codigo aqui
+gabreu — Ontem às 17:30
+cara aquele titulonao sai do meio da tela
+como que pode
+Jaca — Ontem às 17:43
+kkkkkk
+vou volta pro meu agr
+gabreu — Ontem às 17:52
+posso te ligar?
+gabreu — Ontem às 18:09
+tela
+Imagem
+Jaca — Ontem às 18:30
+pode
+Jaca — Ontem às 18:30
+amasso
+gabreu — Hoje às 20:59
+fala bagre
+ta mto ocupado agora?
+Jaca — Hoje às 21:13
+to nd
+gabreu — Hoje às 21:13
+precisava daquele site pra colocar as img do insta
+tlgd?
+Jaca — Hoje às 21:13
+to
+so vou come
+e ja te ajudo
+gabreu — Hoje às 21:14
+demoro
+eu tbm
+Jaca — Hoje às 21:22
+ta ai
+?
+Você perdeu uma chamada de 
+Jaca
+ que durou 3 minutos.
+ — Hoje às 21:22
+gabreu — Hoje às 21:54
+to
+tava arrumando uns ngc
+Jaca — Hoje às 21:55
+avamo bre
+gabreu
+ iniciou uma chamada.
+ — Hoje às 21:55
+Jaca — Hoje às 21:55
+href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+<link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+Jaca — Hoje às 22:04
+<div class="socials">
+                <a href="https://x.com/Jaca67X"><i class="ri-twitter-line"></i></a>
+                <a href="https://www.instagram.com/_m1guelcosta/"><i class="ri-instagram-line"></i></a>
+            </div>
+Miguel (@_m1guelcosta) • Instagram photos and videos
+77 Followers, 301 Following, 0 Posts - See Instagram photos and videos from Miguel (@_m1guelcosta)
+gabreu — Hoje às 22:05
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+Expandir
+message.txt
+7 KB
+https://github.com/RamonDin0/agriiiinho/blob/main/style.css
+GitHub
+agriiiinho/style.css at main · RamonDin0/agriiiinho
+seja o que Deus quiser. Contribute to RamonDin0/agriiiinho development by creating an account on GitHub.
+agriiiinho/style.css at main · RamonDin0/agriiiinho
+gabreu — Hoje às 22:14
+ta na escuta?
+Jaca — Hoje às 22:14
+caiu
+td
+aq
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+Expandir
+index.html
+6 KB
+
+
+body {
+    background-color: #F5F5F5; 
+}
+Expandir
+style.css
+3 KB
+﻿
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -17,6 +207,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do Campo à Cidade: Um Portal de Oportunidades</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"></link>
 </head>
 <body>
     <header>
@@ -106,9 +299,10 @@
         <section class="redes-sociais">
             <h2>Siga-nos nas redes sociais e faça parte da comunidade:</h2>
             <ul>
-                <li><a href="https://www.facebook.com/seedparana" target="_blank" >Facebook</a></li>
-                <li><a href="https://www.instagram.com/seedparana/" target="_blank" >Instagram</a></li>
-                <li><a href="https://www.instagram.com/seedparana/" target="_blank" >Twitter</a></li>
+                <li><a href="https://www.facebook.com/seedparana" target="_blank" ><i class="ri-facebook-circle-line"></i></a></li>
+                <li><a href="https://www.instagram.com/seedparana/" target="_blank" ><i class="ri-instagram-line"></i></a></li>
+                <li><a href="https://www.instagram.com/seedparana/" target="_blank" ><i class="ri-twitter-line"></i></a></li>
+
             </ul>
         </section>
     </main>
